name:                retry

description: 

        This package exposes combinators that can wrap arbitrary
        monadic actions. They run the action and potentially retry
        running it with some configurable delay for a configurable
        number of times.

        The purpose is to make it easier to work with IO and
        especially network IO actions that often experience temporary
        failure and warrant retrying of the original action. For
        example, a database query may time out for a while, in which
        case we should hang back for a bit and retry the query instead
        of simply raising an exception.

version:             0.4
synopsis:            Retry combinators for monadic actions that may fail
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Ozgun Ataman, Soostone Inc
category:            Control
build-type:          Simple
cabal-version:       >=1.10
Homepage:            http://github.com/Soostone/retry

library
  exposed-modules:     Control.Retry
  build-depends:       
    base              ==4.*, 
    exceptions        >= 0.5   && < 0.6,
    lifted-async      >= 0.1.2 && < 0.2,
    lifted-base       >= 0.2.2 && < 0.3,
    transformers-base >= 0.4   && < 0.5,
    monad-control     >= 0.3.2 && < 0.4,
    transformers,
    data-default-class
  hs-source-dirs:      src
  default-language:    Haskell2010

--executable testretry
  --main-is:      testretry.hs
  --build-depends:       
    --base              ==4.*, 
    --exceptions        >= 0.5   && < 0.6,
    --lifted-async      >= 0.1.2 && < 0.2,
    --lifted-base       >= 0.2.2 && < 0.3,
    --transformers-base >= 0.4   && < 0.5,
    --monad-control     >= 0.3.2 && < 0.4,
    --transformers,
    --data-default-class,
    --time
  --hs-source-dirs: src
  --default-language: Haskell2010

test-suite test
    type:           exitcode-stdio-1.0
    main-is:        main.hs
    hs-source-dirs: test,src
    ghc-options:    -threaded
    build-depends:       
        base              ==4.*  
      , exceptions        >= 0.5   && < 0.6
      , lifted-async      >= 0.1.2 && < 0.2
      , lifted-base       >= 0.2.2 && < 0.3
      , transformers-base >= 0.4   && < 0.5
      , monad-control     >= 0.3.2 && < 0.4
      , transformers
      , data-default-class
      , time
      , QuickCheck         >= 2.6
      , HUnit              >= 1.2.5.2
      , hspec              >= 1.7.2
    default-language: Haskell2010




 
